# txture

./: .gitignore  README.md  pyproject.toml
data/metrics/: ascii_all__DejaVuSansMono-Bold_16.json  ascii_letters_digits_punct__DejaVuSansMono-Bold_16.json  ascii_letters_only__DejaVuSansMono-Bold_16.json  ascii_punctuation_only__DejaVuSansMono-Bold_16.json
scripts/: build_metrics.py  camera_test.py  run_ascii_image.py  run_ascii_live.py
src/txture/: __init__.py  ascii_maps.py  ascii_render.py  charsets.py  config.py  controller.py  detect_os.py  devices.py  loaders.py  pipeline.py  run_ascii_live.py
