[project]
name = "txture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NAMIL"}
]
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.95",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "wcwidth>=0.2.14",
]

[project.scripts]
txture = "txture.main:main"
txture-live = "txture.run_ascii_live:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
